--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "miniCAN_hardware_test/lib/mcp2515"]
 	path = miniCAN_hardware_test/lib/mcp2515
 	url = https://github.com/maxpfeif/mcp2515.git
+[submodule "miniCAN_hardware_test/lib/--force"]
+	path = miniCAN_hardware_test/lib/--force
+	url = https://github.com/maxpfeif/mcp2515.git
