adding mcp submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "miniCAN_hardware_test/lib/--force"]
 	path = miniCAN_hardware_test/lib/--force
 	url = https://github.com/maxpfeif/mcp2515.git
+[submodule "lib/mcp2515"]
+	path = lib/mcp2515
+	url = https://github.com/maxpfeif/mcp2515.git
